[gd_scene load_steps=5 format=2]

[ext_resource path="res://Highscores.gd" type="Script" id=1]
[ext_resource path="res://interface/ScoreRow.tscn" type="PackedScene" id=2]
[ext_resource path="res://interface/fonts/montserrat_eb_128.tres" type="DynamicFont" id=3]
[ext_resource path="res://interface/fonts/montserrat_eb_64.tres" type="DynamicFont" id=4]

[node name="Highscores" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.002
margin_left = 23.0
margin_top = 23.0
margin_bottom = -0.280029
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}
score_row = ExtResource( 2 )

[node name="Column" type="VBoxContainer" parent="."]
anchor_right = 0.372
anchor_bottom = 0.5
margin_left = -23.0
margin_top = -22.0
margin_right = 663.796
margin_bottom = 308.0
custom_constants/separation = 25
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Title" type="Label" parent="Column"]
margin_right = 1080.0
margin_bottom = 157.0
custom_fonts/font = ExtResource( 3 )
text = "HIGHSCORES"
align = 1

[node name="Form" type="HBoxContainer" parent="Column"]
margin_top = 182.0
margin_right = 1080.0
margin_bottom = 240.0
custom_constants/separation = 25
alignment = 1

[node name="Label" type="Label" parent="Column/Form"]
margin_left = 67.0
margin_top = 5.0
margin_right = 289.0
margin_bottom = 53.0
custom_fonts/font = ExtResource( 4 )
text = "Nickname:"

[node name="LineEdit" type="LineEdit" parent="Column/Form"]
margin_left = 314.0
margin_right = 814.0
margin_bottom = 58.0
rect_min_size = Vector2( 500, 0 )
custom_fonts/font = ExtResource( 4 )

[node name="FormButton" type="Button" parent="Column/Form"]
margin_left = 839.0
margin_right = 1012.0
margin_bottom = 58.0
custom_fonts/font = ExtResource( 4 )
disabled = true
text = "SUBMIT"

[node name="Headers" type="HBoxContainer" parent="Column"]
margin_top = 265.0
margin_right = 1080.0
margin_bottom = 313.0

[node name="Player" type="Label" parent="Column/Headers"]
margin_right = 538.0
margin_bottom = 48.0
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 4 )
text = "Player"
align = 1
uppercase = true

[node name="Score" type="Label" parent="Column/Headers"]
margin_left = 542.0
margin_right = 1080.0
margin_bottom = 48.0
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 4 )
text = "Score"
align = 1
uppercase = true

[node name="HTTPRequest" type="HTTPRequest" parent="."]
[connection signal="pressed" from="Column/Form/FormButton" to="." method="_on_FormButton_pressed"]
[connection signal="request_completed" from="HTTPRequest" to="." method="_on_HTTPRequest_request_completed"]
